@@ -2,6 +2,9 @@
  PATCH: [ 1442699 ] New Changes.txt file for MakeResDll
  Add Changes.txt change log (this file).
   MakeResDll: new Changes.txt
+ PATCH: [ 1424636 ] New BuildOneLanguage.vbs & fix MakeResDll exit
+  MakeResDll: MakeResDll.cpp StdAfx.h
+  Src\Languages: BuildDll.bat BuildOneLanguage.vbs
 
 2006-03-03 Kimmo
  PATCH: [ 1441387 ] Improve File Encoding dialog
